js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-do-while-import-source-script-code-valid.js
var
smoosh
;
function
smoosh
(
)
{
}
do
{
import
.
source
(
'
<
module
source
>
'
)
;
}
while
(
false
)
;
reportCompare
(
0
0
)
;
