js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-arrow-assignment-expression-not-extensible-args.js
DONOTEVALUATE
(
)
;
let
f
=
(
)
=
>
import
(
'
.
/
empty_FIXTURE
.
js
'
{
}
'
'
)
;
